kubernetes/ingress-nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: cert-issuer
spec:
  rules:
  - host: example.keivanipchihagh.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: example
            port:
              number: 80
  tls:
  - hosts:
    - example.keivanipchihagh.com
    secretName: cert-issuer
